Fixed CSS Alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -182,7 +182,7 @@ td+td {
     .legend {
         position: absolute;
         top: 7px;
-        left: 160px;
+        left: 255px;
     }
     .legend div {
         width: 130px;
